tests/baselines/reference/parserMemberFunctionDeclaration2.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration2.ts(2,19): error TS1005: ';' expected.


==== tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration2.ts (1 errors) ====
    class C {
        static static Foo() { }
                      ~~~
!!! error TS1005: ';' expected.
    }